--- a/notika/green-horizotal/dropdown.html
+++ b/notika/green-horizotal/dropdown.html
@@ -1061,7 +1061,7 @@
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <div class="footer-copy-right">
                         <p>Copyright © 2018 
-<a href="#" >SRTtheme</a>. All rights reserved. Template by <a href="https://colorlib.com">Colorlib</a>.</p>
+. All rights reserved. Template by <a href="https://colorlib.com">Colorlib</a>.</p>
                     </div>
                 </div>
             </div>
