All pages migrated to the new structure

--- a/notika/green-horizotal/tabs-hbs.html
+++ b/notika/green-horizotal/tabs-hbs.html
@@ -10,19 +10,17 @@
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,700,900" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 
     <!-- Essential Notika Template CSS -->
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/notika-custom-icon.css">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="css/responsive.css">
 </head>
 
 <body>
     {{> header}}
     {{> navbar}}
-    {{> breadcrumb pageTitle="Tabs" breadcrumbIcon="notika-app"}}
+    {{> breadcrumb pageTitle="Tabs" breadcrumbIcon="fa-solid fa-cube"}}
 
     <!-- Tabs Content Area Start -->
     <div class="tabs-info-area">
