Legacy file cleanup

--- a/notika/green-horizotal/animations.html
+++ b/notika/green-horizotal/animations.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-page-module="animations">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,9 +14,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-
-    <!-- Mobile Menu CSS -->
-    <link rel="stylesheet" href="css/mobile-menu.css">
 
     <!-- Font Awesome and all other CSS imported via Vite -->
     <!-- ONLY Vite entry point - everything else bundled -->
@@ -569,7 +566,7 @@
                             <p>Click on the buttons below to start the animation action in image.</p>
                         </div>
                         <div class="animation-img mg-b-15">
-                            <img class="animate-one" src="img/widgets/2.png" alt="" />
+                            <img class="animate-one" src="img/widgets/animation-dashboard.svg" alt="" />
                         </div>
                         <div class="animation-action">
                             <div class="row">
@@ -606,7 +603,7 @@
                             <p>Click on the buttons below to start the animation action in image.</p>
                         </div>
                         <div class="animation-img mg-b-15">
-                            <img class="animate-two" src="img/widgets/4.png" alt="" />
+                            <img class="animate-two" src="img/widgets/animation-analytics.svg" alt="" />
                         </div>
                         <div class="animation-action">
                             <div class="row">
@@ -643,7 +640,7 @@
                             <p>Click on the buttons below to start the animation action in image.</p>
                         </div>
                         <div class="animation-img mg-b-15">
-                            <img class="animate-three" src="img/widgets/6.png" alt="" />
+                            <img class="animate-three" src="img/widgets/animation-ui.svg" alt="" />
                         </div>
                         <div class="animation-action">
                             <div class="row">
@@ -682,7 +679,7 @@
                             <p>Click on the buttons below to start the animation action in image.</p>
                         </div>
                         <div class="animation-img mg-b-15">
-                            <img class="animate-four" src="img/widgets/2.png" alt="" />
+                            <img class="animate-four" src="img/widgets/animation-dashboard.svg" alt="" />
                         </div>
                         <div class="animation-action">
                             <div class="row">
@@ -719,7 +716,7 @@
                             <p>Click on the buttons below to start the animation action in image.</p>
                         </div>
                         <div class="animation-img mg-b-15">
-                            <img class="animate-five" src="img/widgets/4.png" alt="" />
+                            <img class="animate-five" src="img/widgets/animation-analytics.svg" alt="" />
                         </div>
                         <div class="animation-action">
                             <div class="row">
@@ -756,7 +753,7 @@
                             <p>Click on the buttons below to start the animation action in image.</p>
                         </div>
                         <div class="animation-img mg-b-15">
-                            <img class="animate-six" src="img/widgets/6.png" alt="" />
+                            <img class="animate-six" src="img/widgets/animation-ui.svg" alt="" />
                         </div>
                         <div class="animation-action">
                             <div class="row">
@@ -795,7 +792,7 @@
                             <p>Click on the buttons below to start the animation action in image.</p>
                         </div>
                         <div class="animation-img mg-b-15">
-                            <img class="animate-seven" src="img/widgets/2.png" alt="" />
+                            <img class="animate-seven" src="img/widgets/animation-dashboard.svg" alt="" />
                         </div>
                         <div class="animation-action">
                             <div class="row">
@@ -832,7 +829,7 @@
                             <p>Click on the buttons below to start the animation action in image.</p>
                         </div>
                         <div class="animation-img mg-b-15">
-                            <img class="animate-eight" src="img/widgets/4.png" alt="" />
+                            <img class="animate-eight" src="img/widgets/animation-analytics.svg" alt="" />
                         </div>
                         <div class="animation-action">
                             <div class="row">
@@ -869,7 +866,7 @@
                             <p>Click on the buttons below to start the animation action in image.</p>
                         </div>
                         <div class="animation-img mg-b-15">
-                            <img class="animate-nine" src="img/widgets/6.png" alt="" />
+                            <img class="animate-nine" src="img/widgets/animation-ui.svg" alt="" />
                         </div>
                         <div class="animation-action">
                             <div class="row">
@@ -908,7 +905,7 @@
                             <p>Click on the buttons below to start the animation action in image.</p>
                         </div>
                         <div class="animation-img mg-b-15">
-                            <img class="animate-ten" src="img/widgets/2.png" alt="" />
+                            <img class="animate-ten" src="img/widgets/animation-dashboard.svg" alt="" />
                         </div>
                         <div class="animation-action">
                             <div class="row">
@@ -945,7 +942,7 @@
                             <p>Click on the buttons below to start the animation action in image.</p>
                         </div>
                         <div class="animation-img mg-b-15">
-                            <img class="animate-eleven" src="img/widgets/4.png" alt="" />
+                            <img class="animate-eleven" src="img/widgets/animation-analytics.svg" alt="" />
                         </div>
                         <div class="animation-action">
                             <div class="row">
@@ -982,7 +979,7 @@
                             <p>Click on the buttons below to start the animation action in image.</p>
                         </div>
                         <div class="animation-img mg-b-15">
-                            <img class="animate-twelve" src="img/widgets/6.png" alt="" />
+                            <img class="animate-twelve" src="img/widgets/animation-ui.svg" alt="" />
                         </div>
                         <div class="animation-action">
                             <div class="row">
@@ -1034,7 +1031,7 @@
     <!-- End Footer area-->
 
     <!-- ONLY VITE ENTRY POINT - Everything else bundled by Vite -->
-    <script type="module" src="/src/js/main.js"></script>
+    <script type="module" src="/src/js/pages/animations.js"></script>
 
     <!-- Clean Navigation JavaScript -->
     <script>
